# py_quirc

./: .gitignore  make.sh  pyproject.toml
cython/: py_quirc.pyx  setup.py
lib/: quirc_api.c  quirc_api.h
