[tool.poetry]
name = "py_quirc"
version = "0.1.0"
description = ""
authors = ["Juan Pablo Miceli <micelijuanpablo@gmail.com>"]
readme = "README.md"
packages = [{include = "quirc_master"}]

[tool.poetry.dependencies]
python = "^3.11"
Cython = "^0.29.36"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
